OpenHealth/force-app/main/default/force-app/main/default/objects/InsuranceClaim__c/InsuranceClaim__c.object-meta.xml
<CustomObject>
    <label>InsuranceClaim</label>
    <pluralLabel>InsuranceClaims</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>