OpenHealth/force-app/main/default/force-app/main/default/objects/InsuranceClaim__c/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <type>Currency</type>
    <precision>18</precision> 
    <scale>2</scale>
</CustomField>