OpenHealth/force-app/main/default/force-app/main/default/objects/InsuranceClaim__c/ClaimNumber__c.field-meta.xml
<CustomField>
    <fullName>ClaimNumber__c</fullName>
    <label>ClaimNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>