OpenHealth/force-app/main/default/force-app/main/default/objects/InsuranceClaim__c/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <type>Lookup</type>
    <referenceTo>Insurance__c</referenceTo>
    <relationshipName>Insurances</relationshipName>
</CustomField>