OpenHealth/force-app/main/default/force-app/main/default/objects/InsuranceClaim__c/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label></label>
    <type></type>
    <length>255</length>
</CustomField>