OpenHealth/force-app/main/default/force-app/main/default/objects/InsuranceClaim__c/SubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>SubmissionDate__c</fullName>
    <label>SubmissionDate</label>
    <type>Date</type>
</CustomField>